# bundle-adjusting-deferred-shading

./: .gitignore  README.md  colmap.py  colmap_test.py  dvc.yaml  exp_run_multiple.py  get_idr_init_poses.py  import_dtu_from_idr.py  params.yaml  pyproject.toml  reconstruct.py  run_experiment.py
.dvc/: config
conf/: config.yaml
conf/params/: base_model.yaml
conf/paths/: base_paths.yaml  default.yaml
conf/run/: base_run.yaml
data/: .gitignore
evaluation/: metrics.py  vis.py
nds/core/: camera.py  view.py
nds/modules/: space_normalization.py  view_sampler.py
nds/utils/: __init__.py  geometry.py  idr.py  io.py
utils/: type_checking.py
