[tool.poetry]
name = "bundle-adjusting shading"
version = "0.1.0"
description = "Code for experiments with trainable bundle-adjusting neural shader"
authors = ["Максим Демидов <myudemidov@edu.hse.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.50.2"
torch = "^2.3.0"
scipy = "^1.13.0"
open3d = "^0.18.0"
meshzoo = "^0.11.4"
matplotlib = "^3.9.0"
hydra-core = "^1.3.2"
scikit-learn = "^1.4.2"
addict = "^2.4.0"
pandas = "^2.2.2"
tensorboard = "^2.16.2"
opencv-python = "^4.9.0.80"
trimesh = "^4.4.0"
scikit-image = "^0.23.2"
ninja = "^1.11.1.1"
superpose3d = {git = "https://github.com/jewettaij/superpose3d.git"}
pyremesh = {path = "ext/pyremesh/pyremesh-0.0.1-cp310-cp310-manylinux_2_12_x86_64.manylinux2010_x86_64.whl"}
nvdiffrast = {git = "https://github.com/NVlabs/nvdiffrast.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
